edit tests and starts work in vsc