@@ -2,6 +2,7 @@ package org.itsimulator.germes.app.infra.util;
 
 import java.lang.reflect.Field;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.itsimulator.germes.app.infra.exception.ConfigurationException;
@@ -12,26 +13,26 @@ import org.itsimulator.germes.app.infra.exception.ConfigurationException;
  */
 
 public class ReflectionUtil {
-	
 	private ReflectionUtil() {
 	}
-	
+
 	/**
-	 * Create an instance of the specified class. This method throws unchecked 
-	 * exception if creation falils
+	 * Creates an instance of the specified class. This method throws unchecked
+	 * exception if creation fails
 	 * 
 	 * @param clz
 	 * @return
-	 * @throws ConfiguraionException
+	 * @throws ConfigurationException
 	 */
-	public static <T> T createInstance(Class<T> clz) throws ConfigurationException {
+	public static <T> T createInstance(Class<T> clz)
+			throws ConfigurationException {
 		try {
 			return clz.newInstance();
 		} catch (InstantiationException | IllegalAccessException e) {
 			throw new ConfigurationException(e);
 		}
 	}
-	
+
 	/**
 	 * Returns list of fields with identical names irregardles of their
 	 * modifiers
@@ -40,23 +41,22 @@ public class ReflectionUtil {
 	 * @param clz2
 	 * @return
 	 */
-	
-	public static List<String> findSimilarFields(Class<?> clz1, Class<?> clz2) throws ConfigurationException {
+	public static List<String> findSimilarFields(Class<?> clz1, Class<?> clz2)
+			throws ConfigurationException {
 		try {
 			Field[] fields = clz1.getDeclaredFields();
 			List<String> targetFields = Stream.of(clz2.getDeclaredFields())
-					.map(field -> field.getName())
-					.toList();
-			
+					.map((field) -> field.getName())
+					.collect(Collectors.toList());
 			return Stream.of(fields)
-					.map(field -> field.getName())
-					.filter(name -> targetFields.contains(name))
-					.toList();
-		} catch (SecurityException e) {
-			throw new ConfigurationException(e);
+					.map((field) -> field.getName())
+					.filter((name) -> targetFields.contains(name))
+					.collect(Collectors.toList());
+		} catch (SecurityException ex) {
+			throw new ConfigurationException(ex);
 		}
 	}
-	
+
 	/**
 	 * Copy specified fields values from source to destination objects
 	 * 
@@ -64,28 +64,30 @@ public class ReflectionUtil {
 	 * @param dest
 	 * @param fields
 	 */
-	public static void copyFields(Object src, Object dest, List<String> fields) throws ConfigurationException {
-		Checks.checkParameter(src != null, "Source object is not ititialized");
-		Checks.checkParameter(dest != null, "Destination object is not ititialized");
-		
+	public static void copyFields(Object src, Object dest, List<String> fields)
+			throws ConfigurationException {
+		Checks.checkParameter(src != null, "Source object is not initialized");
+		Checks.checkParameter(dest != null,
+				"Destination object is not initialized");
 		try {
 			for (String field : fields) {
 				Field fld = src.getClass().getDeclaredField(field);
-				//Skip unknown fields
+				// Skip unknown fields
 				if (fld != null) {
 					fld.setAccessible(true);
 					Object value = fld.get(src);
-					
+
 					Field fldDest = dest.getClass().getDeclaredField(field);
-					
+
 					if (fldDest != null) {
 						fldDest.setAccessible(true);
 						fldDest.set(dest, value);
 					}
 				}
 			}
-		} catch (SecurityException | ReflectiveOperationException | IllegalArgumentException e) {
-			throw new ConfigurationException(e);
+		} catch (SecurityException | ReflectiveOperationException
+				| IllegalArgumentException ex) {
+			throw new ConfigurationException(ex);
 		}
 	}
 
